...
            android:id="@+id/plannerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/shoppingListButton"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
...
