<resources>
    <string name="app_name">Scran Plan</string>
    <string name="action_settings">Settings</string>
    <string name="scranplan_title">Scranplan Project</string>
    <string name="nav_drawer_open">Open Nav Drawer</string>
    <string name="nav_drawer_close">Close Nav Drawer</string>
    <string name="profile_settings_button_string">profile settings</string>
    <string name="prevButton"><![CDATA[<-]]></string>
    <string name="nextButton"><![CDATA[->]]></string>
    <string name="planner_breakfast">Breakfast</string>
    <string name="planner_lunch">Lunch</string>
...
    <string name="post_title">Post title</string>
    <string name="enter_post_text_here">Enter post text here...</string>
    <string name="recipe">+ Recipe</string>
    <string name="review">+ Review</string>
    <string name="image">+ Image</string>
    <string name="post">Post</string>
    <string name="submit">Submit</string>

<!--    Recipe creation strings-->
    <string name="rcBasicInfo">Basic Info</string>7
    <string name="rcRecipeName">Recipe name</string>
    <string name="rcServes">Serves</string>
    <string name="rcDesc">Recipe description</string>
...
